tests/array-exprs-err.chg.stderr
type error: str* is not assignable to {{integer}}
 -> array-exprs-err.chg:1:16

    let x = [1, "a"];
                ^^^
